explore: fix spacing around listview

--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -256,7 +256,7 @@ headerbar.flat {
   padding: 6px;
 }
 
-.explore listview {
+.explore listview row {
   padding: 12px;
 }
 
